Updated lang files, fixed end view.

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -5,7 +5,6 @@ ABOUT_SHORTCUT              =    A
 ABOUT_TITLE                 =    About us
 ABOUT_US_TITLE              =    About us
 ANY_KEY_CONTINUE            =    Press any key to continue...
-ANY_KEY_CONTINUE            =    Press any key to continue...
 APPLY_FAILED                =    Apply failed
 APPLY_KEY_TITLE             =    Apply
 APPLY_SUCCESSFULLY          =    Applied successfully
@@ -22,10 +21,12 @@ DELETE_KEY_TITLE            =    Delete
 EMPTY_SAVE_DESC             =    There aren't any saves.
 ENABLE_MUSIC_Q              =    Enable music?
 ENABLE_SOUND_EFFECT_Q       =    Enable sound effect
+END_SCREEN_TITLE            =    Game results
 EXIT_CONFIRM_TITLE          =    Do you want to exit?
 EXIT_DESC                   =    EXIT THE GAME
 EXIT_SHORTCUT               =    E
 EXIT_TITLE                  =    Exit
+GAME_STATUS_TITLE           =    Game status
 GROUP_TITLE                 =    Group
 HELP_1_TITLE                =    This is the tutorial section. You will learn how to navigate through the game and some basic game features. Hope you enjoy it! Press any key to continue.
 HELP_2_TITLE                =    There will always be hints like these. If you don't know what to do, look for these at the bottom of the screen. They will always be there for you.
@@ -39,7 +40,7 @@ HELP_6-1_TITLE              =    Now pick your favorite, they won't bite
 HELP_6_TITLE                =    Surprise! We know you love these little cute creatures, so we brought them here. It took a lot of work, but it’s definitely paying off
 HELP_7-1_TITLE              =    This is the main game screen.
 HELP_7-2_TITLE              =    The game keeps a record of all the moves, just in case your best friend is trying to cheat.
-HELP_7-3_TITLE              =    The game status bar shows how much time has passed for each player played in Normal mode, or how much time each player has left in Rush mode. It also shows the numbers of wins, since the first match, respective to each player. Moreover, the containers below the status bar show the avatars the players have picked, as well as the the players' username and the current player's turn.
+HELP_7-3_TITLE              =    The game status bar shows how much time has passed for each player played in Normal mode, or how much time each player has left in Rush mode. It also shows the numbers of wins each player has. Moreover, the containers below show the players' avatar, username and the current player's turn.
 HELP_8-1_TITLE              =    The game board is where the actual game takes place. The last move is highligted to make it easier for you to see. You can only place your piece on an empty space in the grid.
 HELP_8-2_TITLE              =    The first player to form an unbroken line of five piece of their color will be the winner. So be careful if you opponent has a four.
 HELP_8-3_TITLE              =    Xs are red, Os are blue.
@@ -63,9 +64,10 @@ MAIN_MENU_DESC              =    RETURNS TO MAIN MENU
 MAIN_MENU_SHORTCUT          =    M
 MAIN_MENU_TITLE             =    Main menu
 MAX_NAME_LENGTH_NOTICE      =    Username's length must be less than
-MOVE_SHORTCUT               =    W, A, S, D
+MOVE_HISTORY_TITLE          =    Move history
+MOVE_SHORTCUT               =    W, A, S, D, Arrow keys
 NAMING_FIELD_TITLE          =    Name
-NAVIGATE_BACK_KEY_SHORTCUT  =    ESC
+NAVIGATE_BACK_KEY_SHORTCUT  =    b
 NAVIGATE_BACK_KEY_TITLE     =    Go back
 NAVIGATION_KEYS_TITLE       =    Move
 NEW_GAME_DESC               =    CREATE A NEW GAME
@@ -90,12 +92,9 @@ OPTION_TYPE_RUSH            =    Rush
 OPTION_YES                  =    Yes
 OVERWRITE_NOTICE_TITLE      =    Do you want to overwrite that file?
 PAUSE_SHORTCUT              =    ESC
-PAUSE_SHORTCUT              =    ESC
-PAUSE_TITLE                 =    Pause
 PAUSE_TITLE                 =    Pause
 PLACE_SHORTCUT              =    Enter
 PLACE_TITLE                 =    Make move
-PLAYER_TIME                 =    Player's time
 PLAYER_TIME                 =    Player's time
 REPLAY_DESC                 =    FULL MATCH REPLAY
 REPLAY_LOAD_MENU_TITLE      =    Replays
@@ -116,7 +115,6 @@ SETTINGS_SHORTCUT           =    S
 SETTINGS_TITLE              =    Settings
 SOUND_EFFECT_TITLE          =    Sound effect
 SPACE_KEY_CONTINUE          =    Press SPACE to continue...
-SPACE_KEY_CONTINUE          =    Press SPACE to continue...
 STRING_INPUT_DONE_LABEL     =    Done
 TIME_OUT                    =    Over!
 TIME_OUT                    =    Over!
@@ -126,4 +124,14 @@ TUTORIAL_SHORTCUT           =    T
 TUTORIAL_TITLE              =    Tutorial
 UNDO_OPTION_TITLE           =    Undo
 UNDO_SHORTCUT               =    Z
+WIN_TEXT                    =    won the game
+THROUGH_TIME_TEXT				=		Through time
+DRAW_TEXT					=	 The game ended in a draw
 YES_TITLE                   =    Yes
+MOVE_TEXT					=	Move
+PLAYER_NAME_LABEL			=	Player's name
+PLAYER_NAME_ONE_LABEL		=	PLayer 1's name
+PLAYER_NAME_TWO_LABEL		=	Player 2's name
+PLAYER_TEXT	= Player
+PLAYED_TEXT = Played
+PLAYER_TIME_TEXT = Player's time
