Updated Lang files, fixed some bugs, added new audio files.

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -10,6 +10,7 @@ APPLY_KEY_TITLE             =    Apply
 APPLY_SUCCESSFULLY          =    Applied successfully
 BACK_TITLE                  =    Go back
 BG_MUSIC_TITLE              =    Background music
+CHANGE_INPUT_LABEL          =    Change
 CUR_DIFFICULTY              =    Difficulty
 CUR_GAME_MODE               =    Mode
 CUR_GAME_TYPE               =    Type
@@ -18,6 +19,7 @@ CUR_NAME                    =    Name
 CUR_SCORE                   =    Score
 CUR_TIME                    =    Time
 DELETE_KEY_TITLE            =    Delete
+DRAW_TEXT                   =    The game ended in a draw
 EMPTY_SAVE_DESC             =    There aren't any saves.
 ENABLE_MUSIC_Q              =    Enable music?
 ENABLE_SOUND_EFFECT_Q       =    Enable sound effect
@@ -66,6 +68,7 @@ MAIN_MENU_TITLE             =    Main menu
 MAX_NAME_LENGTH_NOTICE      =    Username's length must be less than
 MOVE_HISTORY_TITLE          =    Move history
 MOVE_SHORTCUT               =    W, A, S, D, Arrow keys
+MOVE_TEXT                   =    Move
 NAMING_FIELD_TITLE          =    Name
 NAVIGATE_BACK_KEY_SHORTCUT  =    b
 NAVIGATE_BACK_KEY_TITLE     =    Go back
@@ -95,7 +98,13 @@ PAUSE_SHORTCUT              =    ESC
 PAUSE_TITLE                 =    Pause
 PLACE_SHORTCUT              =    Enter
 PLACE_TITLE                 =    Make move
+PLAYED_TEXT                 =    Played
+PLAYER_NAME_LABEL           =    Player's name
+PLAYER_NAME_ONE_LABEL       =    PLayer 1's name
+PLAYER_NAME_TWO_LABEL       =    Player 2's name
+PLAYER_TEXT                 =    Player
 PLAYER_TIME                 =    Player's time
+PLAYER_TIME_TEXT            =    Player's time
 REPLAY_DESC                 =    FULL MATCH REPLAY
 REPLAY_LOAD_MENU_TITLE      =    Replays
 REPLAY_SAVE_MENU_TITLE      =    Replays
@@ -125,13 +134,5 @@ TUTORIAL_TITLE              =    Tutorial
 UNDO_OPTION_TITLE           =    Undo
 UNDO_SHORTCUT               =    Z
 WIN_TEXT                    =    won the game
-THROUGH_TIME_TEXT				=		Through time
-DRAW_TEXT					=	 The game ended in a draw
+WIN_TIME_TEXT               =    won the game (Through time)
 YES_TITLE                   =    Yes
-MOVE_TEXT					=	Move
-PLAYER_NAME_LABEL			=	Player's name
-PLAYER_NAME_ONE_LABEL		=	PLayer 1's name
-PLAYER_NAME_TWO_LABEL		=	Player 2's name
-PLAYER_TEXT	= Player
-PLAYED_TEXT = Played
-PLAYER_TIME_TEXT = Player's time
