--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -10,6 +10,7 @@ APPLY_KEY_TITLE             =    Áp dụng
 APPLY_SUCCESSFULLY          =    Áp dụng thành công
 BACK_TITLE                  =    Quay lại
 BG_MUSIC_TITLE              =    Nhạc nền
+CHANGE_INPUT_LABEL          =    Chuyển đổi
 CUR_DIFFICULTY              =    Độ khó
 CUR_GAME_MODE               =    Chế độ
 CUR_GAME_TYPE               =    Thể loại
@@ -18,15 +19,16 @@ CUR_NAME                    =    Tên
 CUR_SCORE                   =    Điểm
 CUR_TIME                    =    Thời gian
 DELETE_KEY_TITLE            =    Xóa
+DRAW_TEXT                   =    Ván đấu kết thúc với kết quả hòa
 EMPTY_SAVE_DESC             =    Chưa có bất kỳ bản lưu nào
 ENABLE_MUSIC_Q              =    Cho phép bật nhạc?
 ENABLE_SOUND_EFFECT_Q       =    Cho phép hiệu ứng âm thanh
-END_SCREEN_TITLE			=	 Kết quả ván đấu
+END_SCREEN_TITLE            =    Kết quả ván đấu
 EXIT_CONFIRM_TITLE          =    Bạn có muốn thoát khỏi trò chơi?
 EXIT_DESC                   =    Thoát khỏi trò chơi
 EXIT_SHORTCUT               =    o
 EXIT_TITLE                  =    Thoát
-GAME_STATUS_TITLE			=	 Trạng thái ván đấu
+GAME_STATUS_TITLE           =    Trạng thái ván đấu
 GROUP_TITLE                 =    Nhóm
 HELP_1_TITLE                =    Đây là phần hướng dẫn. Bạn sẽ học cách điều hướng trong trò chơi và một số tính năng cơ bản của trò chơi. Hy vọng là bạn sẽ thích nó! Ấn phím bất kỳ để tiếp tục.
 HELP_2_TITLE                =    Mọi màn hình đều sẽ có những mục hướng dẫn như thế này. Nếu bạn không biết phải làm gì, hãy tìm những mục này ở cuối màn hình. Chúng sẽ luôn ở đó giúp đỡ bạn.
@@ -64,8 +66,9 @@ MAIN_MENU_DESC              =    Quay lại menu chính
 MAIN_MENU_SHORTCUT          =    M
 MAIN_MENU_TITLE             =    Menu chính
 MAX_NAME_LENGTH_NOTICE      =    Số kí tự tối đa của tên người dùng là
-MOVE_HISTORY_TITLE			=	Lịch sử nước đi
-MOVE_SHORTCUT				=	 W, A, S, D, Phím mũi tên
+MOVE_HISTORY_TITLE          =    Lịch sử nước đi
+MOVE_SHORTCUT               =    W, A, S, D, Phím mũi tên
+MOVE_TEXT                   =    Nước đi
 NAMING_FIELD_TITLE          =    Tên
 NAVIGATE_BACK_KEY_SHORTCUT  =    Q
 NAVIGATE_BACK_KEY_TITLE     =    Quay lại
@@ -93,9 +96,15 @@ OPTION_YES                  =    Có
 OVERWRITE_NOTICE_TITLE      =    Bạn có muốn ghi đè lên tập tin này?
 PAUSE_SHORTCUT              =    ESC
 PAUSE_TITLE                 =    Tạm dừng
-PLACE_SHORTCUT				=	 Enter
-PLACE_TITLE					=	 Thực hiện nước đi
+PLACE_SHORTCUT              =    Enter
+PLACE_TITLE                 =    Thực hiện nước đi
+PLAYED_TEXT                 =    đánh
+PLAYER_NAME_LABEL           =    Tên người chơi
+PLAYER_NAME_ONE_LABEL       =    Tên người chơi 1
+PLAYER_NAME_TWO_LABEL       =    Tên người chơi 2
+PLAYER_TEXT                 =    Người chơi
 PLAYER_TIME                 =    Thời gian
+PLAYER_TIME_TEXT            =    Thời gian người chơi
 REPLAY_DESC                 =    Phát lại toàn bộ trận đấu
 REPLAY_LOAD_MENU_TITLE      =    Phát lại
 REPLAY_SAVE_MENU_TITLE      =    Phát lại
@@ -123,17 +132,7 @@ TUTORIAL_Q                  =    Bạn có muốn xem qua hướng dẫn của t
 TUTORIAL_SHORTCUT           =    H
 TUTORIAL_TITLE              =    Hướng dẫn
 UNDO_OPTION_TITLE           =    Hoàn tác
-UNDO_SHORTCUT				=	Z	
-WIN_TEXT					=	đã thắng
-THROUGH_TIME_TEXT				= Qua thời gian
-
-DRAW_TEXT					=   Ván đấu kết thúc với kết quả hòa
+UNDO_SHORTCUT               =    Z
+WIN_TEXT                    =    đã thắng
+WIN_TIME_TEXT               =    đã thắng (Thời gian)
 YES_TITLE                   =    Có
-MOVE_TEXT					=   Nước đi
-PLAYER_NAME_LABEL			=	Tên người chơi
-PLAYER_NAME_ONE_LABEL		=	Tên người chơi 1
-PLAYER_NAME_TWO_LABEL		=	Tên người chơi 2
-PLAYER_TEXT	= Người chơi
-PLAYED_TEXT = đánh
-
-PLAYER_TIME_TEXT = Thời gian người chơi
