Added Theming system, better some core interface

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -117,6 +117,7 @@ SAVE_MENU_TITLE             =    Saves
 SAVE_SHORTCUT               =    S
 SAVE_SUCCESS_TITLE          =    Saved successfully
 SAVE_TITLE                  =    Save
+SEARCH_FIELD_TITLE          =    Search
 SEARCH_KEY_TITLE            =    Search
 SELECT_AVATAR_TITLE         =    Choose your avatar
 SELECT_KEY_TITLE            =    Select
@@ -126,7 +127,7 @@ SETTINGS_TITLE              =    Settings
 SOUND_EFFECT_TITLE          =    Sound effect
 SPACE_KEY_CONTINUE          =    Press SPACE to continue...
 STRING_INPUT_DONE_LABEL     =    Done
-TIME_OUT                    =    Over!
+THEME_SELECT_TITLE          =    Theme
 TIME_OUT                    =    Over!
 TUTORIAL_DESC               =    IN-GAME INSTRUCTIONS.
 TUTORIAL_Q                  =    Do you want a quick tutorial?
