Rename Config APIs, add more config to setting screen, setting screen now draw faster

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -28,6 +28,7 @@ EXIT_CONFIRM_TITLE          =    Do you want to exit?
 EXIT_DESC                   =    EXIT THE GAME
 EXIT_SHORTCUT               =    E
 EXIT_TITLE                  =    Exit
+FOUR_WARNING_TITLE          =    Four Warning
 GAME_STATUS_TITLE           =    Game status
 GROUP_TITLE                 =    Group
 HELP_1_TITLE                =    This is the tutorial section. You will learn how to navigate through the game and some basic game features. Hope you enjoy it! Press any key to continue.
@@ -48,6 +49,7 @@ HELP_8-2_TITLE              =    The first player to form an unbroken line of fi
 HELP_8-3_TITLE              =    Xs are red, Os are blue.
 HELP_8-4_TITLE              =    This game is great and so are you.
 HELP_8-5_TITLE              =    That is all you need to know. Now let's get the game started!
+HINT_OPTION_TITLE           =    Hint
 INSTRUCTOR_TITLE            =    Instructor
 LABEL_AI_DIFFICULTY         =    Choose difficulty
 LABEL_GAME_MODE             =    Choose game mode
