--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -28,6 +28,7 @@ EXIT_CONFIRM_TITLE          =    Bạn có muốn thoát khỏi trò chơi?
 EXIT_DESC                   =    Thoát khỏi trò chơi
 EXIT_SHORTCUT               =    o
 EXIT_TITLE                  =    Thoát
+FOUR_WARNING_TITLE          =    Đánh dấu nước 4
 GAME_STATUS_TITLE           =    Trạng thái ván đấu
 GROUP_TITLE                 =    Nhóm
 HELP_1_TITLE                =    Đây là phần hướng dẫn. Bạn sẽ học cách điều hướng trong trò chơi và một số tính năng cơ bản của trò chơi. Hy vọng là bạn sẽ thích nó! Ấn phím bất kỳ để tiếp tục.
@@ -48,6 +49,7 @@ HELP_8-2_TITLE              =    Người chơi đầu tiên tạo được mộ
 HELP_8-3_TITLE              =    X màu đỏ, O màu xanh.
 HELP_8-4_TITLE              =    Người thắng trò chơi có quyền được chảnh.
 HELP_8-5_TITLE              =    Đó là tất cả những điều mà bạn cần biết. Bây giờ chúng ta hãy cùng bắt đầu trò chơi!
+HINT_OPTION_TITLE           =    Gợi ý
 INSTRUCTOR_TITLE            =    Giảng viên hướng dẫn
 LABEL_AI_DIFFICULTY         =    Chọn độ khó
 LABEL_GAME_MODE             =    Chọn chế độ chơi
