Migrate game views color to theme system. Added more hints to game screen.

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -50,6 +50,7 @@ HELP_8-3_TITLE              =    Xs are red, Os are blue.
 HELP_8-4_TITLE              =    This game is great and so are you.
 HELP_8-5_TITLE              =    That is all you need to know. Now let's get the game started!
 HINT_OPTION_TITLE           =    Hint
+HINT_SHORTCUT				=	 H
 INSTRUCTOR_TITLE            =    Instructor
 LABEL_AI_DIFFICULTY         =    Choose difficulty
 LABEL_GAME_MODE             =    Choose game mode
@@ -140,3 +141,5 @@ UNDO_SHORTCUT               =    Z
 WIN_TEXT                    =    won the game
 WIN_TIME_TEXT               =    won the game (Through time)
 YES_TITLE                   =    Yes
+GHOST_TITLE = Ghost mode
+GHOST_SHORTCUT = G
