--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -99,7 +99,7 @@ OVERWRITE_NOTICE_TITLE      =    Bạn có muốn ghi đè lên tập tin này?
 PAUSE_SHORTCUT              =    ESC
 PAUSE_TITLE                 =    Tạm dừng
 PLACE_SHORTCUT              =    Enter
-PLACE_TITLE                 =    Thực hiện nước đi
+PLACE_TITLE                 =    Đánh nước đi
 PLAYED_TEXT                 =    đánh
 PLAYER_NAME_LABEL           =    Tên người chơi
 PLAYER_NAME_ONE_LABEL       =    Tên người chơi 1
@@ -140,3 +140,6 @@ UNDO_SHORTCUT               =    Z
 WIN_TEXT                    =    đã thắng
 WIN_TIME_TEXT               =    đã thắng (Thời gian)
 YES_TITLE                   =    Có
+HINT_SHORTCUT = H
+GHOST_TITLE = Nháp
+GHOST_SHORTCUT = G
