Added locks to warnings.

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -70,7 +70,7 @@ LOAD_TITLE                  =    Load
 MAIN_MENU_DESC              =    RETURNS TO MAIN MENU
 MAIN_MENU_SHORTCUT          =    M
 MAIN_MENU_TITLE             =    Main menu
-MAX_NAME_LENGTH_NOTICE      =    Username's length must be less than
+MAX_NAME_LENGTH_NOTICE      =    Username's length must be at most
 MOVE_HISTORY_TITLE          =    Move history
 MOVE_SHORTCUT               =    W, A, S, D, Arrow keys
 MOVE_TEXT                   =    Move
