--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -109,7 +109,7 @@ PLAYER_NAME_ONE_LABEL       =    Tên người chơi 1
 PLAYER_NAME_TWO_LABEL       =    Tên người chơi 2
 PLAYER_TEXT                 =    Người chơi
 PLAYER_TIME                 =    Thời gian
-PLAYER_TIME_TEXT            =    Thời gian người chơi
+PLAYER_TIME_TEXT            =    Thời gian chơi
 REPLAY_DESC                 =    Phát lại toàn bộ trận đấu
 REPLAY_LOAD_MENU_TITLE      =    Phát lại
 REPLAY_SAVE_MENU_TITLE      =    Phát lại
