--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -31,7 +31,7 @@ EXIT_TITLE                  =    Thoát
 FOUR_WARNING_TITLE          =    Đánh dấu nước 4
 GAME_STATUS_TITLE           =    Trạng thái ván đấu
 GHOST_SHORTCUT              =    G
-GHOST_TITLE                 =    Nháp
+GHOST_TITLE                 =    Đi Nháp
 GROUP_TITLE                 =    Nhóm
 HELP_1_TITLE                =    Đây là phần hướng dẫn. Bạn sẽ học cách điều hướng trong trò chơi và một số tính năng cơ bản của trò chơi. Hy vọng là bạn sẽ thích nó! Ấn phím bất kỳ để tiếp tục.
 HELP_2_TITLE                =    Mọi màn hình đều sẽ có những mục hướng dẫn như thế này. Nếu bạn không biết phải làm gì, hãy tìm những mục này ở cuối màn hình. Chúng sẽ luôn ở đó giúp đỡ bạn.
