Updaed theme, updated game screen hint, fixed cursor highlight.

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -145,3 +145,5 @@ WIN_TIME_TEXT               =    won the game (Through time)
 YES_TITLE                   =    Yes
 ARE_YOU_SURE = Save the current game?
 LABEL_PAUSE = Pause
+SCROLL_SHORTCUT = O, P
+SCROLL_TITLE = Scroll up, down
