Updated game labels, fixed end screen to fit, fixed mutiple bugs, finalized product, if i find one more bug i am going to commit sudoku.

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -8,6 +8,7 @@ ANY_KEY_CONTINUE            =    Press any key to continue...
 APPLY_FAILED                =    Apply failed
 APPLY_KEY_TITLE             =    Apply
 APPLY_SUCCESSFULLY          =    Applied successfully
+ARE_YOU_SURE                =    Save the current game?
 BACK_TITLE                  =    Go back
 BG_MUSIC_TITLE              =    Background music
 CHANGE_INPUT_LABEL          =    Change
@@ -52,11 +53,14 @@ HELP_8-3_TITLE              =    Xs are red, Os are blue.
 HELP_8-4_TITLE              =    This game is great and so are you.
 HELP_8-5_TITLE              =    That is all you need to know. Now let's get the game started!
 HINT_OPTION_TITLE           =    Hint
+HINT_OPTION_TITLE_OFF       =    Hint (Off)
+HINT_OPTION_TITLE_ON        =    Hint (On)
 HINT_SHORTCUT               =    H
 INSTRUCTOR_TITLE            =    Instructor
 LABEL_AI_DIFFICULTY         =    Choose difficulty
 LABEL_GAME_MODE             =    Choose game mode
 LABEL_GAME_TYPE             =    Choose game type
+LABEL_PAUSE                 =    Pause
 LABEL_PLAYER_NAME_ONE       =    Player one's name
 LABEL_PLAYER_NAME_TWO       =    Player two's name
 LABEL_PLAY_AGAIN            =    Play again?
@@ -75,7 +79,7 @@ MOVE_HISTORY_TITLE          =    Move history
 MOVE_SHORTCUT               =    W, A, S, D, Arrow keys
 MOVE_TEXT                   =    Move
 NAMING_FIELD_TITLE          =    Name
-NAVIGATE_BACK_KEY_SHORTCUT  =    b
+NAVIGATE_BACK_KEY_SHORTCUT  =    B
 NAVIGATE_BACK_KEY_TITLE     =    Go back
 NAVIGATION_KEYS_TITLE       =    Move
 NEW_GAME_DESC               =    CREATE A NEW GAME
@@ -122,6 +126,8 @@ SAVE_MENU_TITLE             =    Saves
 SAVE_SHORTCUT               =    S
 SAVE_SUCCESS_TITLE          =    Saved successfully
 SAVE_TITLE                  =    Save
+SCROLL_SHORTCUT             =    O, P
+SCROLL_TITLE                =    Scroll up, down
 SEARCH_FIELD_TITLE          =    Search
 SEARCH_KEY_TITLE            =    Search
 SELECT_AVATAR_TITLE         =    Choose your avatar
@@ -139,11 +145,9 @@ TUTORIAL_Q                  =    Do you want a quick tutorial?
 TUTORIAL_SHORTCUT           =    T
 TUTORIAL_TITLE              =    Tutorial
 UNDO_OPTION_TITLE           =    Undo
+UNDO_OPTION_TITLE_OFF       =    Undo (Off)
+UNDO_OPTION_TITLE_ON        =    Undo (On)
 UNDO_SHORTCUT               =    Z
 WIN_TEXT                    =    won the game
 WIN_TIME_TEXT               =    won the game (Through time)
 YES_TITLE                   =    Yes
-ARE_YOU_SURE = Save the current game?
-LABEL_PAUSE = Pause
-SCROLL_SHORTCUT = O, P
-SCROLL_TITLE = Scroll up, down
