--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -8,6 +8,7 @@ ANY_KEY_CONTINUE            =    Nhấn phím bất kì để tiếp tục...
 APPLY_FAILED                =    Áp dụng không thành công
 APPLY_KEY_TITLE             =    Áp dụng
 APPLY_SUCCESSFULLY          =    Áp dụng thành công
+ARE_YOU_SURE                =    Lưu ván đấu hiện tại?
 BACK_TITLE                  =    Quay lại
 BG_MUSIC_TITLE              =    Nhạc nền
 CHANGE_INPUT_LABEL          =    Chuyển đổi
@@ -52,11 +53,14 @@ HELP_8-3_TITLE              =    X màu đỏ, O màu xanh.
 HELP_8-4_TITLE              =    Người thắng trò chơi có quyền được chảnh.
 HELP_8-5_TITLE              =    Đó là tất cả những điều mà bạn cần biết. Bây giờ chúng ta hãy cùng bắt đầu trò chơi!
 HINT_OPTION_TITLE           =    Gợi ý
+HINT_OPTION_TITLE_OFF       =    Gợi ý (Tắt)
+HINT_OPTION_TITLE_ON        =    Gợi ý (Bật)
 HINT_SHORTCUT               =    H
 INSTRUCTOR_TITLE            =    Giảng viên hướng dẫn
 LABEL_AI_DIFFICULTY         =    Chọn độ khó
 LABEL_GAME_MODE             =    Chọn chế độ chơi
 LABEL_GAME_TYPE             =    Chọn thể loại trò chơi
+LABEL_PAUSE                 =    Tạm dừng
 LABEL_PLAYER_NAME_ONE       =    Tên người chơi 1
 LABEL_PLAYER_NAME_TWO       =    Tên người chơi 2
 LABEL_PLAY_AGAIN            =    Tiếp tục chơi?
@@ -122,6 +126,8 @@ SAVE_MENU_TITLE             =    Lưu
 SAVE_SHORTCUT               =    L
 SAVE_SUCCESS_TITLE          =    Lưu thành công
 SAVE_TITLE                  =    Lưu
+SCROLL_SHORTCUT             =    O, P
+SCROLL_TITLE                =    Cuộn lên, xuống
 SEARCH_FIELD_TITLE          =    Tìm
 SEARCH_KEY_TITLE            =    Tìm
 SELECT_AVATAR_TITLE         =    Lựa chọn hình đại diện của bạn
@@ -139,11 +145,9 @@ TUTORIAL_Q                  =    Bạn có muốn xem qua hướng dẫn của t
 TUTORIAL_SHORTCUT           =    H
 TUTORIAL_TITLE              =    Hướng dẫn
 UNDO_OPTION_TITLE           =    Hoàn tác
+UNDO_OPTION_TITLE_OFF       =    Hoàn tác (Tắt)
+UNDO_OPTION_TITLE_ON        =    Hoàn tác (Bật)
 UNDO_SHORTCUT               =    Z
 WIN_TEXT                    =    đã thắng
 WIN_TIME_TEXT               =    đã thắng (Thời gian)
 YES_TITLE                   =    Có
-ARE_YOU_SURE = Lưu ván đấu hiện tại?
-LABEL_PAUSE = Tạm dừng
-SCROLL_SHORTCUT = O, P
-SCROLL_TITLE = Cuộn lên, xuống
