Fixed some bugs, added new theme, added some sound effects, fixed some labels, should be final now.

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -20,6 +20,7 @@ CUR_NAME                    =    Name
 CUR_SCORE                   =    Score
 CUR_TIME                    =    Time
 DELETE_KEY_TITLE            =    Delete
+DELETE_NOTICE_TITLE         =    Delete this save file?
 DRAW_TEXT                   =    The game ended in a draw
 EMPTY_SAVE_DESC             =    There aren't any saves.
 ENABLE_MUSIC_Q              =    Enable music?
@@ -40,7 +41,7 @@ HELP_3-1_TITLE              =    Press Back to continue.
 HELP_3_TITLE                =    Accidentally turned on the music? Here is where you can turn it off. But don't turn it off yet, these tracks were very carefully chosen to make your improve your playing experience.
 HELP_4-1_TITLE              =    Speed up your mind with Rush mode. There are three options available: one, five and fifteen minutes.
 HELP_4-2_TITLE              =    Or just stick with the old classic normal mode we all love <3
-HELP_4_TITLE                =    This is a menu. You will interact with lots of them throughout the game. Press Up/Down or W/S to navigate through the options, or you can press the underlined character of an option to directly select that option
+HELP_4_TITLE                =    This is a menu. You will interact with lots of them throughout the game. Press Up/Down or W/S to navigate through the options.
 HELP_5_TITLE                =    This is a text box. You can type into these. Try filling out your ✨beautiful name✨
 HELP_6-1_TITLE              =    Now pick your favorite, they won't bite
 HELP_6_TITLE                =    Surprise! We know you love these little cute creatures, so we brought them here. It took a lot of work, but it’s definitely paying off
@@ -79,7 +80,7 @@ MOVE_HISTORY_TITLE          =    Move history
 MOVE_SHORTCUT               =    W, A, S, D, Arrow keys
 MOVE_TEXT                   =    Move
 NAMING_FIELD_TITLE          =    Name
-NAVIGATE_BACK_KEY_SHORTCUT  =    B
+NAVIGATE_BACK_KEY_SHORTCUT  =    b
 NAVIGATE_BACK_KEY_TITLE     =    Go back
 NAVIGATION_KEYS_TITLE       =    Move
 NEW_GAME_DESC               =    CREATE A NEW GAME
