--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -47,7 +47,7 @@ HELP_6-1_TITLE              =    Giờ thì hãy chọn nhân vật bạn yêu t
 HELP_6_TITLE                =    Bất ngờ chưa! Chúng tôi biết bạn yêu thích những sinh vật nhỏ dễ thương này, nên chúng tôi đã mang chúng vào đây.
 HELP_7-1_TITLE              =    Đây là màn hình chính của trò chơi
 HELP_7-2_TITLE              =    Tất cả nước đi của người chơi đều được ghi lại, để phòng hờ trường hợp người bạn của bạn đang tìm cách gian lận.
-HELP_7-3_TITLE              =    Khung trạng thái trò chơi hiển thị khoảng thời gian đã trôi quan của từng người chơi ở chế độ Bình thường, hoặc khoảng thời gian còn lại ở chế độ Tốc độ. Khung cũng cho thấy số trận thắng của từng người chơi. Bên dưới khung trạng thái là khung hiển thị avatar, tên của người chơi và lượt của người chơi hiện tại.
+HELP_7-3_TITLE              =    Khung trạng thái trò chơi hiển thị khoảng thời gian đã trôi qua của từng người chơi ở chế độ Bình thường, hoặc khoảng thời gian còn lại ở chế độ Tốc độ. Khung cũng cho thấy số trận thắng của từng người chơi. Bên dưới khung trạng thái là khung hiển thị avatar, tên của người chơi và lượt của người chơi hiện tại.
 HELP_8-1_TITLE              =    Bàn cờ là nơi trò chơi diễn ra. Nước đi cuối cùng đã được làm nổi bật để giúp bạn dễ nhận ra. Bạn chỉ có thể thực hiện nước đi của mình trên những ô trống của bàn cờ.
 HELP_8-2_TITLE              =    Người chơi đầu tiên tạo được một đường không bị gián đoạn gồm 5 quân cờ cùng màu của họ sẽ là người thắng cuộc. Vì vậy hãy cẩn thận nếu đối thủ của bạn có bốn quân liền kề nhau.
 HELP_8-3_TITLE              =    X màu đỏ, O màu xanh.
