Remove unused code

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -10,7 +10,7 @@ APPLY_KEY_TITLE             =    Apply
 APPLY_SUCCESSFULLY          =    Applied successfully
 ARE_YOU_SURE                =    Save the current game?
 BACK_TITLE                  =    Go back
-BG_MUSIC_TITLE              =    Background music
+BG_MUSIC_TITLE              =    Background
 CHANGE_INPUT_LABEL          =    Change
 CUR_DIFFICULTY              =    Difficulty
 CUR_GAME_MODE               =    Mode
@@ -129,8 +129,8 @@ SAVE_SUCCESS_TITLE          =    Saved successfully
 SAVE_TITLE                  =    Save
 SCROLL_SHORTCUT             =    O, P
 SCROLL_TITLE                =    Scroll up, down
-SEARCH_FIELD_TITLE          =    Search
-SEARCH_KEY_TITLE            =    Search
+SEARCH_FIELD_TITLE          =    Input
+SEARCH_KEY_TITLE            =    Name/Search
 SELECT_AVATAR_TITLE         =    Choose your avatar
 SELECT_KEY_TITLE            =    Select
 SETTINGS_DESC               =    CHANGING GAME SETTINGS
