--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -129,8 +129,8 @@ SAVE_SUCCESS_TITLE          =    Lưu thành công
 SAVE_TITLE                  =    Lưu
 SCROLL_SHORTCUT             =    O, P
 SCROLL_TITLE                =    Cuộn lên, xuống
-SEARCH_FIELD_TITLE          =    Tìm
-SEARCH_KEY_TITLE            =    Tìm
+SEARCH_FIELD_TITLE          =    Đặt tên/tìm kiếm
+SEARCH_KEY_TITLE            =    Nhập
 SELECT_AVATAR_TITLE         =    Lựa chọn hình đại diện của bạn
 SELECT_KEY_TITLE            =    Lựa chọn
 SETTINGS_DESC               =    Thay đổi cài đặt game
