Fixed some bugs

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -10,7 +10,7 @@ APPLY_KEY_TITLE             =    Apply
 APPLY_SUCCESSFULLY          =    Applied successfully
 ARE_YOU_SURE                =    Save the current game?
 BACK_TITLE                  =    Go back
-BG_MUSIC_TITLE              =    Background
+BG_MUSIC_TITLE              =    Background music
 CHANGE_INPUT_LABEL          =    Change
 CUR_DIFFICULTY              =    Difficulty
 CUR_GAME_MODE               =    Mode
