Done the report first chapter, added one more theme

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -129,8 +129,8 @@ SAVE_SUCCESS_TITLE          =    Saved successfully
 SAVE_TITLE                  =    Save
 SCROLL_SHORTCUT             =    O, P
 SCROLL_TITLE                =    Scroll up, down
-SEARCH_FIELD_TITLE          =    Input
-SEARCH_KEY_TITLE            =    Name/Search
+SEARCH_FIELD_TITLE          =    Search
+SEARCH_KEY_TITLE            =    Input
 SELECT_AVATAR_TITLE         =    Choose your avatar
 SELECT_KEY_TITLE            =    Select
 SETTINGS_DESC               =    CHANGING GAME SETTINGS
