--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -20,7 +20,7 @@ CUR_NAME                    =    Tên
 CUR_SCORE                   =    Điểm
 CUR_TIME                    =    Thời gian
 DELETE_KEY_TITLE            =    Xóa
-DELETE_NOTICE_TITLE         =    Xóa ván đấu này?
+DELETE_NOTICE_TITLE         =    Xóa bản lưu này?
 DRAW_TEXT                   =    Ván đấu kết thúc với kết quả hòa
 EMPTY_SAVE_DESC             =    Chưa có bất kỳ bản lưu nào
 ENABLE_MUSIC_Q              =    Cho phép bật nhạc?
@@ -103,7 +103,7 @@ OPTION_NULL                 =    Không có
 OPTION_TYPE_NORMAL          =    Thường
 OPTION_TYPE_RUSH            =    Tốc độ
 OPTION_YES                  =    Có
-OVERWRITE_NOTICE_TITLE      =    Bạn có muốn ghi đè lên tập tin này?
+OVERWRITE_NOTICE_TITLE      =    Bạn có muốn ghi đè bản lưu này?
 PAUSE_SHORTCUT              =    ESC
 PAUSE_TITLE                 =    Tạm dừng
 PLACE_SHORTCUT              =    Enter
@@ -129,7 +129,7 @@ SAVE_SUCCESS_TITLE          =    Lưu thành công
 SAVE_TITLE                  =    Lưu
 SCROLL_SHORTCUT             =    O, P
 SCROLL_TITLE                =    Cuộn lên, xuống
-SEARCH_FIELD_TITLE          =    Đặt tên/tìm kiếm
+SEARCH_FIELD_TITLE          =    Tìm kiếm
 SEARCH_KEY_TITLE            =    Nhập
 SELECT_AVATAR_TITLE         =    Lựa chọn hình đại diện của bạn
 SELECT_KEY_TITLE            =    Lựa chọn
