Updated shortcut keys.

--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -87,15 +87,22 @@ NEW_GAME_DESC               =    Tạo trò chơi mới
 NEW_GAME_SHORTCUT           =    T
 NEW_GAME_TITLE              =    Trò chơi mới
 NO_TITLE                    =    Không
+NO_TITLE_SHORTCUT           =    K
 OFF_TITLE                   =    Tắt
 ON_TITLE                    =    Bật
 OPEN_SOURCE_CODE_LINK_TITLE =    Mở link
 OPTION_1                    =    01:00
 OPTION_15                   =    15:00
+OPTION_15_SHORTCUT          =    0
+OPTION_1_SHORTCUT           =    1
 OPTION_5                    =    05:00
+OPTION_5_SHORTCUT           =    5
 OPTION_AI_EASY              =    Dễ
+OPTION_AI_EASY_SHORTCUT     =    D
 OPTION_AI_HARD              =    Khó
+OPTION_AI_HARD_SHORTCUT     =    K
 OPTION_AI_NORMAL            =    Trung bình
+OPTION_AI_NORMAL_SHORTCUT   =    T
 OPTION_MODE_PVE             =    PvE
 OPTION_MODE_PVP             =    PvP
 OPTION_NO                   =    Không
@@ -115,6 +122,8 @@ PLAYER_NAME_TWO_LABEL       =    Tên người chơi 2
 PLAYER_TEXT                 =    Người chơi
 PLAYER_TIME                 =    Thời gian
 PLAYER_TIME_TEXT            =    Thời gian chơi
+PVE_SHORTCUT                =    E
+PVP_SHORTCUT                =    P
 REPLAY_DESC                 =    Phát lại toàn bộ trận đấu
 REPLAY_LOAD_MENU_TITLE      =    Phát lại
 REPLAY_SAVE_MENU_TITLE      =    Phát lại
@@ -145,6 +154,8 @@ TUTORIAL_DESC               =    Hướng dẫn chơi.
 TUTORIAL_Q                  =    Bạn có muốn xem qua hướng dẫn của trò chơi?
 TUTORIAL_SHORTCUT           =    H
 TUTORIAL_TITLE              =    Hướng dẫn
+TYPE_NORMAL_SHORTCUT        =    h
+TYPE_RUSH_SHORTCUT          =    T
 UNDO_OPTION_TITLE           =    Hoàn tác
 UNDO_OPTION_TITLE_OFF       =    Hoàn tác (Tắt)
 UNDO_OPTION_TITLE_ON        =    Hoàn tác (Bật)
@@ -152,3 +163,4 @@ UNDO_SHORTCUT               =    Z
 WIN_TEXT                    =    đã thắng
 WIN_TIME_TEXT               =    đã thắng (Thời gian)
 YES_TITLE                   =    Có
+YES_TITLE_SHORTCUT          =    C
