Changed hints a bit.

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -41,7 +41,7 @@ HELP_3-1_TITLE              =    Press Back to continue.
 HELP_3_TITLE                =    Accidentally turned on the music? Here is where you can turn it off. But don't turn it off yet, these tracks were very carefully chosen to make your improve your playing experience.
 HELP_4-1_TITLE              =    Speed up your mind with Rush mode. There are three options available: one, five and fifteen minutes.
 HELP_4-2_TITLE              =    Or just stick with the old classic normal mode we all love <3
-HELP_4_TITLE                =    This is a menu. You will interact with lots of them throughout the game. Press Up/Down or W/S to navigate through the options.
+HELP_4_TITLE                =    This is a menu. You will interact with lots of them throughout the game. Press Up/Down or W/S to navigate through the options. Or just press the underlined character to go to that screen.
 HELP_5_TITLE                =    This is a text box. You can type into these. Try filling out your ✨beautiful name✨
 HELP_6-1_TITLE              =    Now pick your favorite, they won't bite
 HELP_6_TITLE                =    Surprise! We know you love these little cute creatures, so we brought them here. It took a lot of work, but it’s definitely paying off
