--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -41,7 +41,7 @@ HELP_3-1_TITLE              =    Ấn Quay lại để tiếp tục
 HELP_3_TITLE                =    Vô tình bật nhạc? Đây là nơi bạn có thể tắt nó đi. Nhưng đừng vội làm thế, những bản nhạc này đã được lựa chọn rất cẩn thận để giúp cải thiện trải nghiệm cuộc chơi của bạn.
 HELP_4-1_TITLE              =    Tăng tốc trí óc của bạn với chế độ Tốc độ. Có ba tùy chọn có sẵn: 1, 5 và 15 phút.
 HELP_4-2_TITLE              =    Hoặc thư giãn hơn chế độ Bình thường kinh điển mà tất cả chúng ta đều yêu thích <3
-HELP_4_TITLE                =    Đây là một màn hình menu. Bạn sẽ tương tác với chúng khá nhiều xuyên suốt trò chơi. Nhấn Lên/Xuống hoặc W/S để điều hướng qua các tùy chọn.
+HELP_4_TITLE                =    Đây là một màn hình menu. Bạn sẽ tương tác với chúng khá nhiều xuyên suốt trò chơi. Nhấn Lên/Xuống hoặc W/S để điều hướng qua các tùy chọn. Hoặc ấn kí tự được gạch chân để chuyển đến màn hình đó.
 HELP_5_TITLE                =    Đây là một hộp văn bản. Bạn có thể gõ vào đây. Hãy thử điền vào ✨cái tên đẹp đẽ✨ của bạn
 HELP_6-1_TITLE              =    Giờ thì hãy chọn nhân vật bạn yêu thích, đừng lo chúng sẽ không cắn đâu.
 HELP_6_TITLE                =    Bất ngờ chưa! Chúng tôi biết bạn yêu thích những sinh vật nhỏ dễ thương này, nên chúng tôi đã mang chúng vào đây.
