--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -161,7 +161,7 @@ UNDO_OPTION_TITLE_OFF       =    Undo (Off)
 UNDO_OPTION_TITLE_ON        =    Undo (On)
 UNDO_SHORTCUT               =    Z
 WIN_TEXT                    =    won the game
-WIN_TIME_TEXT               =    won the game (Through time)
+WIN_TIME_TEXT               =    won the game (Time)
 YES_TITLE                   =    Yes
 YES_TITLE_SHORTCUT          =    Y
 EXIT_SEARCH_KEY_TITLE = Stop searching
